Bug 374766 - Themes are not installed in the correct folder
Summary: Themes are not installed in the correct folder
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-08 17:36 UTC by Roman Gilg
Modified: 2017-01-20 14:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2017-01-08 17:36:50 UTC
Install a new theme (tried it with Preview Stack and Thumbnail Grid) via system settings.

The package gets extracted to: 
~/.local/share/

Instead of:
~/.local/share/kwin/tabbox/
Comment 1 Martin Flöser 2017-01-08 19:24:28 UTC
Maybe a regression introduced with https://cgit.kde.org/kwin.git/commit/?id=4d669b19125f07e8e227ea38565d29d7515680dc ?
Comment 2 Christoph Feck 2017-01-10 20:17:06 UTC
Could be a duplicate of bug 374463.
Comment 3 Marco Martin 2017-01-20 14:35:12 UTC
Git commit 405518c41da9df963823eed9c7688b4353f29fe6 by Marco Martin.
Committed on 20/01/2017 at 14:34.
Pushed by mart into branch 'Plasma/5.9'.

use proper packagestructures

Summary:
as the plasmapkg2 utility is dead, scripts and tabboxes couldn't
be installed anymore, as plasmapkg2 was launched with an hardcoded
package type (and had a bunch of custom code for it)
and no packagestructure for the relevant package types existed.

the port of scripts and tabboxes to kpackage in kwin is quite
incomplete and somewhat strange (given the fact that was started by
looking manually for the file as it couldn't link to libplasma)

this makes things a bit better as now scripts and tabboxes have an actual
package structure, making it installable by kpackagetool5.
in the future, the port should be completed and replace all the manual lookup
of files with package::filePath as it should work now given that valid
structures exist

Test Plan:
tabbox plugins and kwin scripts can be installed from knewstuff
again and can be successfully loaded

Reviewers: #plasma, graesslin, subdiff

Reviewed By: #plasma, graesslin

Subscribers: graesslin, plasma-devel, kwin, #kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D4202

M  +1    -0    CMakeLists.txt
M  +8    -8    kcmkwin/kwintabbox/main.cpp
A  +2    -0    packageplugins/CMakeLists.txt
A  +16   -0    packageplugins/scripts/CMakeLists.txt
A  +10   -0    packageplugins/scripts/kwin-packagestructure-scripts.desktop
A  +62   -0    packageplugins/scripts/scripts.cpp     [License: LGPL (v2+)]
A  +33   -0    packageplugins/scripts/scripts.h     [License: LGPL (v2+)]
A  +16   -0    packageplugins/windowswitcher/CMakeLists.txt
A  +10   -0    packageplugins/windowswitcher/kwin-packagestructure-windowswitcher.desktop
A  +62   -0    packageplugins/windowswitcher/windowswitcher.cpp     [License: LGPL (v2+)]
A  +33   -0    packageplugins/windowswitcher/windowswitcher.h     [License: LGPL (v2+)]

https://commits.kde.org/kwin/405518c41da9df963823eed9c7688b4353f29fe6